force-app/main/default/objects/Call_Recording_Storage__mdt/Call_Recording_Storage__mdt.object-meta.xml
<CustomObject>
    <label>Call Recording Storage</label>
    <pluralLabel>Call Recording Storage</pluralLabel>
</CustomObject>