force-app/main/default/objects/Call_Recording_Storage__mdt/fields/Giganet_Connect_Bolt_On__c.field-meta.xml
<CustomField>
    <fullName>Giganet_Connect_Bolt_On__c</fullName>
    <label>Giganet Connect Bolt On</label>
    <referenceTo>Giganet_Connect_Bolt_On__mdt</referenceTo>
    <relationshipLabel>Call Recording Storage</relationshipLabel>
    <relationshipName>Call_Recording_Storage</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>