force-app/main/default/objects/Call_Recording_Storage__mdt/fields/Monthly_Unit_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Revenue__c</fullName>
    <label>Monthly Unit Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>