force-app/main/default/objects/Call_Recording_Storage__mdt/fields/Storage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Storage_Amount__c</fullName>
    <label>Storage Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>